[package]
name = "netsim-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread", "macros", "net", "time"] }
futures = "0.3.28"
net-literals = "0.2.0"
ioctl-sys = "0.8.0"
oneshot = { version = "0.1.5", features = ["std"] }
rand = "0.8.5"
pin-project = "1.1.3"
bytes = "1.4.0"

