[package]
name = "netsim"
version = "0.3.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Run tests in network-isolated threads. Intercept and meddle with their packets."
repository = "https://github.com/canndrew/netsim-ng"
documentation = "https://docs.rs/netsim"
license = "MIT OR BSD-3-Clause"
keywords = ["network", "ip", "testing"]
categories = ["asynchronous", "development-tools::testing", "network-programming", "simulation", "virtualization"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.168"
tokio = { version = "1.42.0", features = ["sync", "rt-multi-thread", "macros", "net", "time", "io-util"] }
futures = "0.3.31"
net-literals = "0.2.0"
ioctl-sys = "0.8.0"
oneshot = { version = "0.1.8", features = ["std"] }
rand = "0.8.5"
pin-project = "1.1.7"
bytes = "1.9.0"
log = "0.4.22"
netsim-macros = { path = "netsim-macros", version = "0.3.0" }

