[package]
name = "netsim-macros"
version = "0.3.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Macros for netsim."
repository = "https://github.com/canndrew/netsim-ng"
documentation = "https://docs.rs/netsim"
license = "MIT OR BSD-3-Clause"
keywords = ["network", "ip", "testing"]
categories = ["asynchronous", "development-tools::testing", "network-programming", "simulation", "virtualization"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.90", features = ["full"] }
quote = { version = "1.0.37" }
proc-macro2 = { version = "1.0.92" }

